# trip-planner

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
app/: fetch_prices.py  groceries.py  main.py  save_and_load.py  session_state.py  signin.py  style.css  xml_parser.py
app/app_pages/: equipment.py  meals.py  overview.py  shopping_list.py
data/price_lists/: PriceFull-20230712.gzip
data/trips/: Summer_2023_12_07_2023_to__14_07_2023.xlsx
